--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -25,23 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
-    "tup = ('I',)\n"
+    "tup=('I',)\n"
    ]
   },
   {
@@ -55,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +53,7 @@
        "tuple"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,14 +77,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-44b8312ff4eb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#No se puede modificar una tupla de ninguna manera, son inmutables\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
-    "tup\n",
+    "tup.append(\"r\")\n",
     "\n",
-    "#No se puede modificar una tupla de ninguna manera, son inmutables, pero si se puede convertir en \n",
-    "#lista para hacer el cambio y luego reconvertirlo en tupla\n"
+    "#No se puede modificar una tupla de ninguna manera, son inmutables\n"
    ]
   },
   {
@@ -113,13 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "Al igual que en el punto anterior, no se puede.\n"
+    "tup=list(tup)\n",
+    "tup=[\"I\",\"r\",\"o\",\"n\",\"h\",\"a\",\"c\",\"k\"]\n",
+    "tup=tuple(tup)\n",
+    "#Puedes convertir la tupla en una lista para añadir los cambios y volver a convertirla en tupla\n"
    ]
   },
   {
@@ -137,12 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup1 =  ('I', 'r', 'o', 'n') tup2 =  ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "tup1=(\"I\",\"r\",\"o\",\"n\")\n",
-    "tup2=(\"h\",\"a\",\"c\",\"k\")"
+    "tup1=tup[:4]\n",
+    "tup2=tup[-4:]\n",
+    "print('tup1 = ',tup1, 'tup2 = ',tup2)"
    ]
   },
   {
@@ -156,11 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup3 =  ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3=(tup1+tup2)\n",
+    "print('tup3 = ', tup3)"
    ]
   },
   {
@@ -172,11 +203,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "len(tup3) == len(tup1) + len(tup2)"
    ]
   },
   {
@@ -188,11 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3.index('h')"
    ]
   },
   {
@@ -212,11 +267,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for e in letters:\n",
+    "    if e in tup3:\n",
+    "        print ('True')\n",
+    "    else:\n",
+    "        print ('False')"
    ]
   },
   {
@@ -230,11 +303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "for e in letters:\n",
+    "    print (tup3.count(e))"
    ]
   },
   {
@@ -250,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,11 +362,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{34: 1,\n",
+       " 44: 1,\n",
+       " 36: 1,\n",
+       " 10: 1,\n",
+       " 19: 1,\n",
+       " 77: 1,\n",
+       " 96: 1,\n",
+       " 71: 1,\n",
+       " 43: 1,\n",
+       " 26: 1,\n",
+       " 32: 1,\n",
+       " 80: 1,\n",
+       " 22: 1,\n",
+       " 74: 1,\n",
+       " 7: 1,\n",
+       " 94: 1,\n",
+       " 47: 1,\n",
+       " 54: 1,\n",
+       " 23: 1,\n",
+       " 6: 1,\n",
+       " 62: 1,\n",
+       " 24: 1,\n",
+       " 42: 1,\n",
+       " 25: 1,\n",
+       " 84: 1,\n",
+       " 17: 1,\n",
+       " 76: 1,\n",
+       " 16: 1,\n",
+       " 2: 1,\n",
+       " 79: 1,\n",
+       " 28: 1,\n",
+       " 21: 1,\n",
+       " 78: 1,\n",
+       " 87: 1,\n",
+       " 89: 1,\n",
+       " 92: 1,\n",
+       " 39: 1,\n",
+       " 48: 1,\n",
+       " 53: 1,\n",
+       " 60: 1,\n",
+       " 45: 1,\n",
+       " 14: 1,\n",
+       " 20: 1,\n",
+       " 83: 1,\n",
+       " 12: 1,\n",
+       " 95: 1,\n",
+       " 46: 1,\n",
+       " 59: 1,\n",
+       " 37: 1,\n",
+       " 97: 1,\n",
+       " 85: 1,\n",
+       " 52: 1,\n",
+       " 0: 1,\n",
+       " 65: 1,\n",
+       " 27: 1,\n",
+       " 93: 1,\n",
+       " 18: 1,\n",
+       " 81: 1,\n",
+       " 11: 1,\n",
+       " 69: 1,\n",
+       " 41: 1,\n",
+       " 61: 1,\n",
+       " 91: 1,\n",
+       " 51: 1,\n",
+       " 68: 1,\n",
+       " 86: 1,\n",
+       " 29: 1,\n",
+       " 40: 1,\n",
+       " 8: 1,\n",
+       " 88: 1,\n",
+       " 63: 1,\n",
+       " 9: 1,\n",
+       " 67: 1,\n",
+       " 49: 1,\n",
+       " 98: 1,\n",
+       " 73: 1,\n",
+       " 4: 1,\n",
+       " 72: 1,\n",
+       " 31: 1,\n",
+       " 75: 1}"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(100),k=80)\n"
    ]
   },
   {
@@ -291,11 +469,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set1=set(sample_list_1)\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -314,11 +502,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sample_list_2 = random.sample(range(100),k=80)"
    ]
   },
   {
@@ -330,11 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)"
    ]
   },
   {
@@ -346,11 +536,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{7, 16, 17, 21, 26, 41, 44, 54, 60, 62, 65, 71, 76, 77, 78, 89, 93, 94}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set3 = set1 - set2\n",
+    "set3"
    ]
   },
   {
@@ -362,11 +565,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3, 5, 13, 15, 30, 33, 38, 50, 55, 56, 57, 58, 64, 66, 82, 90, 99}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set4 = set2 - set1\n",
+    "set4"
    ]
   },
   {
@@ -378,11 +594,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set5 = set1.union(set2)"
    ]
   },
   {
@@ -406,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n"
    ]
   },
   {
@@ -418,11 +635,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -434,11 +663,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set6.update(set3,set5)"
    ]
   },
   {
@@ -450,11 +680,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -466,11 +708,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "print (set1.issubset(set2))\n",
+    "\n",
+    "print (set1.issubset(set3))"
    ]
   },
   {
@@ -482,11 +736,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 36,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50,\n",
+       " 51,\n",
+       " 52,\n",
+       " 53,\n",
+       " 54,\n",
+       " 55,\n",
+       " 56,\n",
+       " 57,\n",
+       " 58,\n",
+       " 59,\n",
+       " 60,\n",
+       " 61,\n",
+       " 62,\n",
+       " 63,\n",
+       " 64,\n",
+       " 65,\n",
+       " 66,\n",
+       " 67,\n",
+       " 68,\n",
+       " 69,\n",
+       " 71,\n",
+       " 72,\n",
+       " 73,\n",
+       " 74,\n",
+       " 75,\n",
+       " 76,\n",
+       " 77,\n",
+       " 78,\n",
+       " 79,\n",
+       " 80,\n",
+       " 81,\n",
+       " 82,\n",
+       " 83,\n",
+       " 84,\n",
+       " 85,\n",
+       " 86,\n",
+       " 87,\n",
+       " 88,\n",
+       " 89,\n",
+       " 90,\n",
+       " 91,\n",
+       " 92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 95,\n",
+       " 96,\n",
+       " 97,\n",
+       " 98,\n",
+       " 99}"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set3.union(set4,set5)\n",
+    "set1.union(set2)"
    ]
   },
   {
@@ -498,11 +862,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set3 == set1"
    ]
   },
   {
@@ -514,11 +890,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set1.pop()\n",
+    "\n",
+    "#El metodo pop para sets, no permite eliminar un valor concreto, si no que elimina un valor aleatorio"
    ]
   },
   {
@@ -538,7 +928,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]"
    ]
   },
   {
@@ -556,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,12 +981,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-191-89fd5a4c9db0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mword_freq2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mword_freq2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mword_freq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "keys = []\n",
+    "for k in word_freq.keys():\n",
+    "    keys.append(k)\n",
+    "keys.sort()\n",
+    "word_freq2 = []\n",
+    "for k in keys:\n",
+    "    word_freq2.append[word_freq[k]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
