--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -57,11 +57,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tuple_1 = (\"Python\", \"tuples\", \"immutable\", \"object\") \n",
+    "\n",
+    "type(tuple_1)\n",
+    "\n"
    ]
   },
   {
@@ -79,13 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup=('I', )\n",
+    "tup= tup + ('r', 'o', 'n', 'h', 'a', 'c', 'k',)\n",
+    "            \n",
+    "print(tup)\n",
+    "# Your explanation here\n",
     "\n",
-    "# Your explanation here\n"
+    "#Hay que poner una coma en vez de dos para que este correcto"
    ]
   },
   {
@@ -103,13 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 's')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "y = list(tup)\n",
+    "y[7] = \"s\"\n",
+    "tup = tuple(y) \n",
+    "\n",
+    "print(tup)\n",
+    "\n",
+    "# Your explanation here\n",
+    "#I want to change the first value in this tuple but I understand that tuples are immutable so will not work."
    ]
   },
   {
@@ -127,11 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup=(\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "print(tup[:4])\n",
+    "print(tup[-4:])\n"
    ]
   },
   {
@@ -145,11 +203,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1= ('I', 'r', 'o', 'n')\n",
+    "tup2= ('h', 'a', 'c', 'k')\n",
+    "tup=(\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "\n",
+    "print(tup1+tup2)\n",
+    "\n",
+    "(tup1+tup2)==tup"
    ]
   },
   {
@@ -161,11 +244,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(len(tup1))\n",
+    "print(len(tup2))\n",
+    "print(len(tup1)+len(tup2))\n",
+    "\n",
+    "\n",
+    "(len(tup1)+len(tup2))==(len(tup3))"
    ]
   },
   {
@@ -177,11 +287,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup3=('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "tup3.index(\"h\")\n"
    ]
   },
   {
@@ -201,11 +325,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "\n",
+    "for x in letters:\n",
+    "    if x in tup3:\n",
+    "        print(True)\n",
+    "        \n",
+    "    else:\n",
+    "        print(False)\n",
+    "\n"
    ]
   },
   {
@@ -219,11 +365,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a en 1\n",
+      "b en 0\n",
+      "c en 1\n",
+      "d en 0\n",
+      "e en 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "\n",
+    "for letra in letters:\n",
+    "    \n",
+    "    contador=0\n",
+    "\n",
+    "    if letra in tup3:\n",
+    "        \n",
+    "        contador+=1\n",
+    "    print(f\"{letra} en {contador}\")\n",
+    "        \n",
+    "  \n"
    ]
   },
   {
@@ -239,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,11 +436,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 92, 6, 51, 3, 80, 76, 39, 27, 14, 93, 96, 57, 25, 53, 22, 8, 0, 56, 68, 98, 60, 47, 41, 85, 65, 67, 38, 54, 55, 79, 5, 48, 35, 73, 83, 82, 23, 19, 16, 31, 49, 70, 58, 95, 72, 37, 64, 50, 77, 90, 13, 17, 36, 71, 40, 2, 81, 42, 99, 18, 4, 7, 10, 29, 89, 15, 43, 87, 30, 91, 33, 63, 44, 61, 34, 62, 1, 45, 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "sample_list_1=[]\n",
+    "n=80\n",
+    "sample_list_1 = random.sample(range(100),80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -280,11 +465,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79}\n",
+      "80\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "set1 = set(sample_list_1)\n",
+    "print(set1)\n",
+    "print(len(set1))\n",
+    "\n",
+    "len(set1)==len(sample_list_1)\n",
+    "\n"
    ]
   },
   {
@@ -303,11 +514,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[39, 76, 27, 93, 34, 59, 100, 4, 78, 92, 24, 93, 33, 63, 28, 16, 79, 93, 35, 31, 74, 52, 32, 69, 84, 3, 7, 3, 99, 59, 78, 66, 21, 85, 27, 44, 75, 7, 98, 73, 12, 25, 48, 64, 7, 14, 8, 81, 82, 63, 41, 11, 8, 57, 49, 73, 18, 40, 6, 71, 100, 4, 93, 66, 54, 26, 95, 0, 22, 87, 38, 65, 30, 37, 50, 64, 55, 83, 70, 76]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sample_list_2=[]\n",
+    "for i in range (80):\n",
+    "    sample_list_2.append(random.randint(0,100))\n",
+    "    \n",
+    "print (sample_list_2)\n"
    ]
   },
   {
@@ -319,11 +543,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 3, 4, 6, 7, 8, 11, 12, 14, 16, 18, 21, 22, 24, 25, 26, 27, 28, 30, 31, 32, 33, 34, 35, 37, 38, 39, 40, 41, 44, 48, 49, 50, 52, 54, 55, 57, 59, 63, 64, 65, 66, 69, 70, 71, 73, 74, 75, 76, 78, 79, 81, 82, 83, 84, 85, 87, 92, 93, 95, 98, 99, 100}\n",
+      "63\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(set2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -335,11 +571,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 67, 5, 10, 42, 43, 77, 46, 15, 47, 17, 51, 20, 53, 56, 60, 29, 62}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set3=(set1-set1.intersection(set2))\n",
+    "print(set3)"
    ]
   },
   {
@@ -351,11 +597,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 16, 18, 22, 25, 28, 30, 35, 37, 39, 40, 41, 44, 48, 50, 52, 57, 63, 64, 66, 69, 70, 71, 81, 82, 83, 84, 85, 87, 92, 93, 95, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set4=(set2-set1.intersection(set2))\n",
+    "print(set4)"
    ]
   },
   {
@@ -367,11 +623,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 6, 7, 8, 11, 12, 14, 21, 24, 26, 27, 31, 32, 33, 34, 38, 49, 54, 55, 59, 65, 73, 74, 75, 76, 78, 79}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set5=set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -391,11 +657,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "len(set1) + len(set2) - len(set5) == len(set3) + len(set4) + len(set5)"
    ]
   },
   {
@@ -407,11 +686,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set6 = set()\n",
+    "type(set6)"
    ]
   },
   {
@@ -423,11 +715,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 17, 20, 21, 24, 26, 27, 29, 31, 32, 33, 34, 38, 42, 43, 46, 47, 49, 51, 53, 54, 55, 56, 59, 60, 62, 65, 67, 73, 74, 75, 76, 77, 78, 79}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set6 = set3 | set5\n",
+    "\n",
+    "print(set6)"
    ]
   },
   {
@@ -439,11 +742,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -455,11 +770,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "z = set1.issubset(set2) \n",
+    "print(z)\n",
+    "\n",
+    "a = set1.issubset(set3)\n",
+    "print(a)"
    ]
   },
   {
@@ -471,11 +801,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 17, 18, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 59, 60, 62, 63, 64, 65, 66, 67, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 87, 92, 93, 95, 98, 99, 100}\n",
+      "{0, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 17, 18, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 59, 60, 62, 63, 64, 65, 66, 67, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 87, 92, 93, 95, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "b = set3.union(set4,set5)\n",
+    "print(b)\n",
+    "\n",
+    "b.union(set1,set2)\n",
+    "print(b)"
    ]
   },
   {
@@ -487,11 +831,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 17, 18, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 59, 60, 62, 63, 64, 65, 66, 67, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 87, 92, 93, 95, 98, 99, 100}\n",
+      "{0, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 17, 18, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 59, 60, 62, 63, 64, 65, 66, 67, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 87, 92, 93, 95, 98, 99, 100}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "j = set3.union(set4,set5)\n",
+    "print(j)\n",
+    "\n",
+    "k = set.union(set1,set2)\n",
+    "print(k)\n",
+    "\n",
+    "j==k"
    ]
   },
   {
@@ -503,12 +873,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 17, 20, 21, 24, 26, 27, 29, 31, 32, 33, 34, 38, 42, 43, 46, 47, 49, 51, 53, 54, 55, 56, 59, 60, 62, 65, 67, 73, 74, 75, 76, 77, 78, 79]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "p = list(set1)\n",
+    "print(p)\n",
+    "type(p)\n",
+    "\n",
+    "p.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -523,11 +923,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3782134895.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/41/xnksc3m541lchdrncpcngj8r0000gn/T/ipykernel_26697/3782134895.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for list_to_remove in set1\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "setl = set(list_to_remove)\n",
+    "k =set1.intersection\n",
+    "\n",
+    "\n"
    ]
   },
   {
